DumpRenderTree doesn't disable web preferences autosave https://bugs.webkit.org/show_bug.cgi?id=127062

Reviewed by Dan Bernstein.

* DumpRenderTree/mac/DumpRenderTree.mm: (prepareConsistentTestingEnvironment):
Do it.


Canonical link: https://commits.webkit.org/145068@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@162092 268f45cc-cd09-0410-ab3c-d52691b4dbfc